// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CollectionItems - Snapshots > matches the owner Visual layout snapshot 1`] = `
<div
  data-has-empty-state="true"
  data-has-trailing-slot="true"
  data-has-visual-hidden-items-notice="true"
  data-requested-layout="visual"
  data-testid="timeline-feed"
  data-variant="collection"
>
  <div
    class=""
    data-testid="container"
  >
    <div
      data-author-pubky="o1gg96ewuojmopcjbz8895478wdtxtzzber7aezq6ror5a91j7dy"
      data-has-post-details="true"
      data-has-reorder="true"
      data-layout="visual"
      data-post-id="0034BBBDFK83G"
      data-reorder-active="false"
      data-testid="collection-hero"
    >
      <button
        type="button"
      >
        Switch to Grid
      </button>
    </div>
  </div>
  <div
    class="flex w-full items-center gap-3 rounded-md bg-card p-4"
    data-cy="collection-hidden-items-notice"
    data-testid="container"
    role="status"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-info size-4 shrink-0 text-muted-foreground"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="12"
        cy="12"
        r="10"
      />
      <path
        d="M12 16v-4"
      />
      <path
        d="M12 8h.01"
      />
    </svg>
    <p
      class="text-sm font-medium text-muted-foreground"
      data-testid="typography"
    >
      collections.single.hiddenItemsNotice
    </p>
  </div>
  <div
    data-cy="collection-add-content-visual"
    data-testid="add-content-dialog"
    data-trigger-variant="visual"
  />
</div>
`;

exports[`CollectionItems - Snapshots > matches the owner non-empty snapshot 1`] = `
<div
  data-has-empty-state="true"
  data-has-trailing-slot="true"
  data-has-visual-hidden-items-notice="true"
  data-requested-layout="columns"
  data-testid="timeline-feed"
  data-variant="collection"
>
  <div
    class=""
    data-testid="container"
  >
    <div
      data-author-pubky="o1gg96ewuojmopcjbz8895478wdtxtzzber7aezq6ror5a91j7dy"
      data-has-post-details="true"
      data-has-reorder="true"
      data-layout="grid"
      data-post-id="0034BBBDFK83G"
      data-reorder-active="false"
      data-testid="collection-hero"
    >
      <button
        type="button"
      >
        Switch to Grid
      </button>
    </div>
  </div>
  <div
    class="flex w-full items-center gap-3 rounded-md bg-card p-4"
    data-cy="collection-hidden-items-notice"
    data-testid="container"
    role="status"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-info size-4 shrink-0 text-muted-foreground"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="12"
        cy="12"
        r="10"
      />
      <path
        d="M12 16v-4"
      />
      <path
        d="M12 8h.01"
      />
    </svg>
    <p
      class="text-sm font-medium text-muted-foreground"
      data-testid="typography"
    >
      collections.single.hiddenItemsNotice
    </p>
  </div>
  <div
    data-cy="collection-add-content-grid"
    data-testid="add-content-dialog"
    data-trigger-variant="grid"
  />
</div>
`;

exports[`CollectionItems - Snapshots > matches the owner reorder-mode snapshot 1`] = `
<div
  class="flex w-full flex-col gap-6"
  data-testid="container"
>
  <div
    data-author-pubky="o1gg96ewuojmopcjbz8895478wdtxtzzber7aezq6ror5a91j7dy"
    data-has-post-details="true"
    data-has-reorder="true"
    data-layout="grid"
    data-post-id="0034BBBDFK83G"
    data-reorder-active="true"
    data-testid="collection-hero"
  >
    <button
      type="button"
    >
      Switch to Grid
    </button>
  </div>
  <div
    data-disabled="false"
    data-entry-count="1"
    data-testid="collection-reorder-grid"
  />
</div>
`;
